# maya_deformers

./: maya_viewport_draw.py
FrameRotationInterpolatorNode/: frameInterpolator.py
autoRollNode/cpp/: CMakeLists.txt
autoRollNode/cpp/source/: autoRollNode.cpp  autoRollNode.h
autoRollNode/py/: autoRollNode.py.txt
collisionDeformer/cpp/source/: CollisionDeformer.cpp
collision_deformer/: collision_deformer.py
collision_deformer/cpp/source/: WrinkleDeformer.h
drawViewportText/: CMakeLists.txt
drawViewportText/source/: drawViewportText.h
feather_slide/: feather_slide.py
proxyGenMesh/py/: proxyModelCmd.py  proxyModelCmd_codemium.py
reduceCmd/: reduceCmd.py
textLocator/: CMakeLists.txt
textLocator/source/: TextLocator.cpp
wrinkleDeformer/cpp/: CMakeLists.txt
wrinkleDeformer/cpp/source/: WrinkleDeformer.cpp  WrinkleDeformer.h
wrinkleDeformer/py/: __init__.py  wrinkle_deformer.py
wrinkle_deformer/: wrinkle_deformer.py
wrinkle_deformer/cpp/: wrinkle_deformer.cpp
